--- a/less/home-page.less
+++ b/less/home-page.less
@@ -88,7 +88,7 @@
   }
 
   .content-pick {
-    width: 100%;
+    width: 90%;
     padding-top: 40px;
  
     .flex-justify-centered;
@@ -109,6 +109,7 @@
 
         .flex-justify-centered;
         @media @mobile {
+          align-self: center;
           .button-creator(@eastern-blue, 350px, 40px, 2rem);
         }
       }
