--- a/less/mixins.less
+++ b/less/mixins.less
@@ -18,8 +18,7 @@
 .flex-column-centered {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+ 
 }
 .flex-column-reverse {
   display: flex;
@@ -57,7 +56,8 @@
   color: @white;
   .flex-justify-centered();
   cursor: pointer;
-  padding: 20px 0;
+  padding: 20px 0px;
+  
 }
 
 //Border Overflow
